--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +8,102 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+* {
+  overflow-x: hidden;
+}
+
+.hero {
+  min-height: 80vh;
+  background-color: #23272A;
+  font-weight: 900;
+  color: whitesmoke;
+  font-size: 3.5rem;
+}
+
+.penguin-float {
+  position: absolute;
+  background-color: red;
+  justify-content: center;
+}
+
+
+.hero-right {
+  text-align: left;
+  padding-left: 5%;
+}
+
+.hero-left {
+  text-align: center;
+  height: 80vh;
+}
+
+.navbar-lcc {
+  font-weight: 800 !important;
+  color: goldenrod !important;
+  font-size: 2rem !important;
+}
+
+/* .float-wrap {
+  width: 100vw;
+  height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+} */
+
+.color-text {
+  color: goldenrod;
+}
+
+.hero-text {
+  margin-top: 20%;
+}
+
+.hero-text-small {
+  font-size: 2vw;
+  color: whitesmoke;
+}
+
+.source-text {
+  background-color: goldenrod;
+  color: white;
+  font-weight: 900;
+  text-align: center;
+  font-size: 4rem;
+  line-height: 5rem;
+}
+
+.vision-mission-wrap {
+  background-color: #23272A;
+  padding-top: 5%;
+}
+
+.vision-title {
+  color: goldenrod;
+  font-weight: 800;
+  font-size: 3rem;
+  text-align: center;
+  height: 25rem;
+  margin: 5%;
+}
+
+.what-we-do-wrap {
+  height: 50vh;
+  background-color: #23272A;
+  padding-top: 5%;
+}
+
+.what-we-do-text-head {
+  font-weight: 800;
+  font-size: 2rem;
+  color: goldenrod;
+}
+
+.what-we-do-text-text {
+  color: white;
+  font-size: 1.3rem;
+  font-weight: 500;
 }
