--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,12 @@
 body {
   margin: 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -16,7 +16,7 @@ code {
 
 .hero {
   min-height: 80vh;
-  background-color: #23272A;
+  background-color: #23272a;
   font-weight: 900;
   color: whitesmoke;
   font-size: 3.5rem;
@@ -27,7 +27,6 @@ code {
   background-color: red;
   justify-content: center;
 }
-
 
 .hero-right {
   text-align: left;
@@ -77,7 +76,7 @@ code {
 }
 
 .vision-mission-wrap {
-  background-color: #23272A;
+  background-color: #23272a;
   padding-top: 5%;
 }
 
@@ -92,7 +91,7 @@ code {
 
 .what-we-do-wrap {
   height: 50vh;
-  background-color: #23272A;
+  background-color: #23272a;
   padding-top: 5%;
 }
 
@@ -106,4 +105,10 @@ code {
   color: white;
   font-size: 1.3rem;
   font-weight: 500;
+}
+
+.cards {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
 }
