--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -1,6 +1,6 @@
 .card {
-  background-color: white;
-  color: #272727;
+  background-color: #52575d;
+  color: #ccc;
   padding: 20px;
   border-radius: 10px;
   border: 0px;
@@ -8,7 +8,8 @@
   border-style: solid;
   transition: 200ms;
   max-width: 380px;
-
+  margin: 1em;
+  box-shadow: 0px -2px 10px rgba(204, 204, 204, 0.226);
 }
 
 .card:hover {
@@ -24,17 +25,13 @@
   align-items: center;
 }
 
-.profile {
-  width: 2.5rem;
-  height: 2.5rem;
-  background-color: tomato;
-  border-radius: 50%;
-  margin: 10px;
-  font-size: 20pt;
-  text-align: center;
-  font-weight: bold;
-  color: white;
-  justify-content: center;
+.card-profile {
+  flex: 0.5;
+  font-size: 1.3rem;
+  margin-bottom: 0;
+  margin-top: 0.7rem;
+  display: inline;
+  margin-right: 2rem;
 }
 
 .letter {
@@ -47,9 +44,10 @@
 
 .card-title {
   flex: 0.5;
-  font-size: large;
+  font-size: 1.5rem;
   margin-bottom: 0;
   margin-top: 0;
+  color: #fcfcfc;
 }
 .card-date {
   flex: 0.3;
@@ -69,7 +67,7 @@
 
 .card-text {
   width: 350px;
-  font-size: medium;
+  font-size: 0.8rem;
 }
 
 .card-like-bar {
@@ -85,5 +83,6 @@
 }
 
 .card-button {
-  margin-top:2rem;
+  margin-top: 2rem;
+  color: #fcfcfc;
 }
